--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "PowerModelsAnalytics"
 uuid = "7425d11c-6b70-11e9-2bc6-9bcd3191d4b9"
 authors = ["David M Fobes <dfobes@lanl.gov>", "Carleton Coffrin"]
-version = "0.4.2"
+version = "0.5.0"
 
 [deps]
 ColorVectorSpace = "c3611d14-8923-5661-9e6a-0046d554d3a4"
@@ -17,22 +17,24 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Vega = "239c3e63-733f-47ad-beb7-a12fde22c578"
 
 [compat]
-ColorVectorSpace = "~0.8, 0.9"
-Colors = "~0.11, ~0.12"
-Compat = "~2, ~3"
-LightGraphs = "^1.3"
-PowerModels = "~0.15, ~0.16, ~0.17, ~0.18"
-PowerModelsDistribution = "~0.8, ~0.9, ~0.10, ~0.11"
-PyCall = "~1.91, ~1.92"
+ColorVectorSpace = "~0.9.8"
+Colors = "~0.12.8"
+Compat = "~3.42.0"
+LightGraphs = "~1.3"
+PowerModels = "~0.19.4"
+PowerModelsDistribution = "~0.14"
+PowerModelsITD = "~0.6.1"
+PyCall = "~1.93.1"
 Setfield = "~0.6, 0.7"
-SpecialFunctions = "~0.10, 1.2"
-Vega = "~2"
-julia = "~1.6"
+SpecialFunctions = "~2.1.4"
+Vega = "~2.3.0"
+julia = "1.6"
 
 [extras]
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 PowerModelsDistribution = "d7431456-977f-11e9-2de3-97ff7677985e"
+PowerModelsITD = "615c3f80-b0cb-4ecd-88fe-27bee056c380"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "PowerModels", "PowerModelsDistribution"]
+test = ["Test", "PowerModels", "PowerModelsDistribution", "PowerModelsITD"]
